# locald

./: .gitignore  .prototools  .yamllint  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  bootstrap.sh  clippy.toml  codecov.yml  implementation-plan.toml  install.sh  lefthook.yml  locald.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-test.sh  verify-exec-controller.sh
.cargo/: config.toml
.github/: copilot-instructions.md
.github/prompts/: bootstrap-axioms.prompt.md  capture-transcript.prompt.md  code-review.prompt.md  conceptual-integrity.prompt.md  context-serialization-check.prompt.md  docs-restructure.prompt.md  dream-team-exosuit.prompt.md  dream-team-lite.prompt.md  dream-team-universal.prompt.md  extraction-audit.md  fresh-eyes.prompt.md  gap-analysis.prompt.md  intent-amplifier.prompt.md  locald-workflow-correction.md  persona-build.prompt.md  phase-continue.prompt.md  phase-rescue.prompt.md  phase-start.prompt.md  phase-status.prompt.md  phase-transition.prompt.md  prepare-phase.prompt.md  prompt-builder.prompt.md  qa-zero-to-one.prompt.md  rebuild-coherence.prompt.md  rfc-audit.prompt.md  troubleshoot-cli.prompt.md  verify-plan.prompt.md
.github/workflows/: ci-watchdog.yml  ci.yml  release.yml
cnb-client/src/: runtime.rs
crates/cnb-client/: Cargo.toml  README.md
crates/cnb-client/src/: lib.rs  lifecycle.rs
crates/locald-builder/: Cargo.toml  README.md
crates/locald-builder/src/: builder.rs  image.rs  lib.rs
crates/locald-cli/: Cargo.toml  README.md  build.rs
crates/locald-cli/src/: channel.rs  cli.rs  doctor.rs  handlers.rs  hints.rs  history.rs  main.rs  run.rs  style.rs  surface_manifest.rs  trust.rs  try_cmd.rs  utils.rs
crates/locald-cli/tests/: dependency_test.rs  e2e.rs  macos_integration.rs  platform_errors.rs  plugin_commands.rs  postgres_test.rs  regression_symlinks.rs
crates/locald-core/: Cargo.toml
crates/locald-core/src/: config_test.rs  hosts.rs  service.rs
crates/locald-core/src/buildpack/: image.rs
crates/locald-core/src/config/: env_provenance.rs  global.rs
crates/locald-oci/: README.md
crates/locald-server/: Cargo.toml  README.md  build.rs
crates/locald-shim/: Cargo.toml  apparmor.profile
crates/locald-shim/src/: main.rs
crates/locald-shim/tests/: architecture_compliance.rs
crates/locald-utils/: Cargo.toml  README.md
crates/locald-vmm/: Cargo.toml  README.md
crates/locald-vmm/examples/: find_boot_params.rs
crates/locald-vmm/src/: linux_x86.rs  macos.rs  tests.rs
crates/locald-vmm/src/linux/: boot.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: assets.rs  check.rs  ci.rs  coverage.rs  deps.rs  dev.rs  docs.rs  e2e.rs  fast.rs  fix.rs  main.rs  sandbox.rs  verify.rs
crates/xtask/src/util/: fs.rs  http.rs  mod.rs  process.rs  which.rs
docs/agent-context/: axioms.system.toml  axioms.workflow.toml  changelog.md  cnb-compliance-audit.md  decisions.md  docs-restructure-plan.md  feedback.toml  ideas.toml  letter-to-exosuit.md  plan-outline.md  plan.toml  task-list.md  (+1 more)
examples/: config_test.rs  package-lock.json
locald-cli/: Cargo.toml  README.md  build.rs
locald-cli/src/: build.rs  cli.rs  client.rs  container.rs  crash.rs  debug.rs  doctor.rs  handlers.rs  hints.rs  init.rs  main.rs  monitor.rs  plugin.rs  progress.rs  run.rs  service.rs  style.rs  surface_manifest.rs  trust.rs  type_check.rs  utils.rs
locald-cli/tests/: dependency_test.rs  e2e.rs  phase113_integration_boundaries_audit.rs  plugin_commands.rs  postgres_test.rs  regression_symlinks.rs  tui_test.rs
locald-core/: Cargo.toml  README.md
locald-dashboard/: README.md  locald.toml  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
locald-dashboard-e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
locald-docs/: README.md  astro.config.mjs  locald.toml  package.json
locald-e2e/: Cargo.toml
locald-e2e/src/: harness.rs  lib.rs
locald-e2e/tests/: cgroup_cleanup.rs  dependencies.rs  oci_example.rs  service_execution.rs  service_urls.rs
locald-oci/: Cargo.toml
locald-oci/src/: check_types.rs  runtime.rs  runtime_spec.rs
locald-server/: Cargo.toml  README.md  build.rs
locald-server/src/: api.rs  config_loader.rs  container.rs  health.rs  ipc.rs  lib.rs  logging.rs  main.rs  manager.rs  notify.rs  proxy.rs  proxy_test.rs  pty_test.rs  state.rs  static_server.rs
locald-server/src/assets/: app.js  index.html  style.css
locald-server/src/assets/_app/: version.json
locald-server/src/assets/_app/immutable/assets/: 0.sufBB6Xu.css  2.BetlPoZh.css
locald-server/src/assets/_app/immutable/chunks/: BG5Dbz2k.js  BHlkUKrU.js  BTGVxaYV.js  Bc8zOjvW.js  C3MvE_jc.js  CNtBeHb_.js  CawjGj_N.js  CzTj0oKo.js  DSAeBHHp.js  Ds_L6JKW.js  Dt-yWX4h.js  DwX1LtJ9.js  GpBdtvPH.js  Tbtzkai9.js  VPVTviwm.js
locald-server/src/assets/_app/immutable/entry/: app.B7TsXQVm.js  app.CIFTypW6.js  start.DPmi6AHU.js  start.MgRsKRVq.js
locald-server/src/assets/_app/immutable/nodes/: 0.CSWn0dw0.js  1.Bxq0CR-3.js  1.anLA7SOo.js  2.BaEnwX-W.js  2.qDd42T_T.js
locald-server/src/plugins/: mod.rs  plan.rs  runner.rs
locald-server/src/runtime/: docker.rs  mod.rs  process.rs
locald-server/src/service/: docker.rs  exec.rs  postgres.rs  site.rs
locald-server/wit/: locald-plugin.wit
locald-shim/: Cargo.toml  README.md
locald-shim/src/: main.rs
locald-utils/: Cargo.toml
locald-utils/src/: cert.rs  cgroup.rs  discovery.rs  env.rs  fs.rs  lib.rs  notify.rs  postgres.rs  privileged.rs  probe.rs  process.rs  shim.rs
locald-utils/tests/: phase99_docs_acceptance.rs  phase99_sandbox_identity.rs
locald-vmm/: Cargo.toml
scripts/: build-assets.sh  check  check-cli-surface-docs.mjs  check-docs-screenshots.mjs  check-docs-sidebar-links.mjs  check-logs.sh  ci-pr-fast.sh  ci-rust-checks-local.sh  coverage.sh  dev-server  fast-build  fast-clippy  fix  sandbox-run.sh  setup-test-shim.sh  test-dashboard-e2e.sh  untested-change-tripwire.sh  update-deps.sh  verify-autostart.sh  verify-install-assets.sh  verify-oci-example.sh  verify-phase-33.sh  verify-phase.sh  verify-runc-example.sh  verify-update.sh  watch-ci.sh
(+735 files in other folders)
