[workspace]
members = [
    "locald-server",
    "locald-cli",
    "locald-core",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"

[workspace.lints.clippy]
# Groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Deny specific ones that are definitely bad
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
await_holding_lock = "deny"
needless_pass_by_value = "deny"
trivially_copy_pass_by_ref = "deny"

# Allow noisy pedantic lints
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
unused_async = "allow"
match_bool = "allow"
single_match_else = "allow"

