[workspace]
members = [
    "crates/locald-server",
    "crates/locald-cli",
    "crates/locald-core",
    "crates/locald-shim",
    "crates/locald-builder",
    "e2e/rust/locald-e2e",
    "examples/cnb-test/rust-extractor",
    "examples/oci-example",
    "crates/locald-utils",
    "crates/locald-oci",
    "crates/cnb-client",
    "crates/locald-vmm",
    "crates/xtask",
    "tools/fetch-kernel",
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
# Groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Architecture & Safety Lints
print_stdout = "warn"
print_stderr = "warn"
unwrap_used = "warn"
expect_used = "warn"
await_holding_lock = "warn"
let_underscore_must_use = "warn"

# Deny specific ones that are definitely bad
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
needless_pass_by_value = "deny"
trivially_copy_pass_by_ref = "deny"

# Documentation Lints
missing_errors_doc = "warn"

# Allow noisy pedantic lints
module_name_repetitions = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
unused_async = "allow"
match_bool = "allow"
single_match_else = "allow"

# =============================================================================
# CHANNEL SYSTEM
# =============================================================================
# locald uses a channel-based release model (like Rust/Chrome):
#
#   stable  - Default. Only battle-tested features.
#   beta    - Features graduating to stable in the next release.
#   nightly - Includes experimental features (plugins, vmm, cnb, etc.)
#
# Build with: cargo build -p locald-cli --features channel-nightly
#
# Features are defined in each crate (e.g., crates/locald-cli/Cargo.toml).
# Cargo does not support workspace-level features, so each crate must define
# its own feature flags with consistent naming conventions.
# =============================================================================

# Build performance defaults
#
# Cargo enables incremental compilation for `dev` by default, but we make it
# explicit so it stays true if defaults ever change or if we later add more
# profile tuning.
[profile.dev]
incremental = true

[profile.test]
incremental = true
