[package]
name = "locald-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "locald"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.38"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
dialoguer = "0.12.0"
libc = "0.2.177"
locald-core = { version = "0.1.0", path = "../locald-core" }
ratatui = "0.29.0"
serde_json = "1.0.145"
toml = "0.9.8"

[lints]
workspace = true
