[package]
name = "locald-cli"
version = "0.1.0"
edition.workspace = true

[features]
# Default builds include the embedded dashboard + docs UI.
default = ["ui"]

# Builds locald with embedded UI assets (delegates to locald-server).
ui = ["locald-server/ui"]

[[bin]]
name = "locald"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
ca_injector = "0.1.2"
caps = "0.5.6"
chrono = "0.4.38"
clap = { version = "4.5.53", features = ["derive"] }
cliclack = "0.3.7"
comfy-table = "7.2.1"
console = "0.16.1"
crossterm = "0.29.0"
ctrlc = "3.5.1"
dialoguer = "0.12.0"
directories = "6.0.0"
home = "0.5.12"
indicatif = "0.18.3"
libc = "0.2.177"
listeners = "0.3.0"
locald-builder = { version = "0.1.0", path = "../locald-builder" }
locald-core = { version = "0.1.0", path = "../locald-core" }
locald-server = { version = "0.1.0", path = "../locald-server", default-features = false }
locald-utils = { version = "0.1.0", path = "../locald-utils" }
nix = { version = "0.30.1", features = ["user"] }
ratatui = "0.29.0"
rcgen = "0.14.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.1.1"
oci-spec = "0.8.3"
predicates = "3.1.3"
rexpect = "0.6.2"
sqlx = "0.8.6"
tempfile = "3.23.0"
tokio = "1"
