[package]
name = "locald-e2e"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1", features = ["full"] }
tempfile = "3.10"
reqwest = "0.12.24"
serde = "1.0"
serde_json = "1.0.145"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
locald-core = { path = "../locald-core" }
assert_cmd = "2.0"
# We might need to run the binary, so we don't necessarily depend on locald-server/cli directly
# but we might want some shared types.

[dev-dependencies]
predicates = "3.0"
