[package]
name = "locald-oci"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
flate2 = "1.1.5"
locald-core = { path = "../locald-core" }
locald-utils = { path = "../locald-utils" }
oci-distribution = "0.11.0"
oci-spec = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
tar = "0.4.44"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.43"

[lints]
workspace = true
