[package]
name = "locald-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.7.5", features = ["ws"] }
bollard = "0.19.4"
clap = { version = "4.5.53", features = ["derive"] }
daemonize = "0.5.0"
directories = "6.0.0"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.18", features = ["full"] }
locald-core = { version = "0.1.0", path = "../locald-core" }
mime_guess = "2.0.5"
nix = { version = "0.30.1", features = ["process", "signal"] }
rand = "0.8.5"
rust-embed = "8.5.0"
serde_json = "1.0.145"
shlex = "1.3.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tower = "0.5.2"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
