[package]
name = "locald-utils"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
directories = "6.0.0"
hex = "0.4.3"
nix = { version = "0.30.1", features = [
  "process",
  "signal",
  "socket",
  "user",
  "fs",
] }
portable-pty = "0.9.0"
postgresql_embedded = "0.20.0"
rcgen = "0.14.5"
reqwest = "0.12.24"
rustls = { version = "0.23.35", features = ["ring"] }
semver = "1.0.27"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.9"
tar = "0.4.44"
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.43"
uuid = { version = "1.19.0", features = ["v4"] }

[lints]
workspace = true
