[package]
name = "cnb-client"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
ignore = "0.4.25"
libc = "0.2.178"
locald-oci = { version = "0.1.0", path = "../locald-oci" }
locald-utils = { version = "0.1.0", path = "../locald-utils" }
nix = { version = "0.30.1", features = ["user"] }
reflink = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.43"
uuid = { version = "1.19.0", features = ["v4"] }

[lints]
workspace = true
