[package]
name = "locald-builder"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
libc = "0.2.178"
log = "0.4.29"
oci-spec = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.43"
uuid = { version = "1.19.0", features = ["v4"] }
reflink = "0.1.3"
ignore = "0.4.25"
locald-utils = { version = "0.1.0", path = "../locald-utils" }
locald-oci = { version = "0.1.0", path = "../locald-oci" }
cnb-client = { version = "0.1.0", path = "../cnb-client" }

[lints]
workspace = true
