[package]
name = "locald-cli"
version = "0.1.0"
edition.workspace = true

[features]
# Default builds include the embedded dashboard + docs UI.
default = ["ui", "channel-stable"]

# Builds locald with embedded UI assets (delegates to locald-server).
ui = ["locald-server/ui"]

# =============================================================================
# CHANNEL FEATURES
# =============================================================================
# See workspace Cargo.toml for channel documentation.

# Stable channel (default)
channel-stable = []

# Beta channel: features graduating to stable.
# NOTE: At present, beta intentionally mirrors channel-stable and does not
#       enable additional experimental features. This placeholder exists so
#       that features can be promoted from nightly to beta in future releases
#       without changing existing stable behavior.
channel-beta = ["channel-stable"]

# Nightly channel: includes all experimental features
channel-nightly = [
    "channel-beta",
    "experimental-plugins",
    "experimental-vmm",
    "experimental-cnb",
    "experimental-containers",
]

# -----------------------------------------------------------------------------
# Experimental feature flags
# -----------------------------------------------------------------------------
experimental-plugins = []    # WASM plugin system (locald plugin ...)
experimental-vmm = []        # Placeholder for planned VMM support; no functionality yet
experimental-cnb = []        # Cloud Native Buildpacks (locald build)
experimental-containers = [] # OCI container execution (locald container ...)

[[bin]]
name = "locald"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.38"
clap = { version = "4.5.53", features = ["derive"] }
cliclack = "0.3.7"
comfy-table = "7.2.1"
console = "0.16.1"
crossterm = "0.29.0"
ctrlc = "3.5.1"
textwrap = "0.16.1"
dialoguer = "0.12.0"
directories = "6.0.0"
home = "0.5.12"
indicatif = "0.18.3"
libc = "0.2.177"
listeners = "0.3.0"
locald-builder = { version = "0.1.0", path = "../locald-builder" }
locald-core = { version = "0.1.0", path = "../locald-core" }
locald-server = { version = "0.1.0", path = "../locald-server", default-features = false }
locald-utils = { version = "0.1.0", path = "../locald-utils" }
nix = { version = "0.30.1", features = ["user"] }
ratatui = "0.29.0"
rcgen = "0.14.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

# =============================================================================
# PLATFORM-SPECIFIC DEPENDENCIES
# =============================================================================

# Linux: ca_injector for system trust store (update-ca-certificates, etc.)
[target.'cfg(target_os = "linux")'.dependencies]
ca_injector = "0.1.2"

# macOS: security-framework for native Keychain API
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.2"
pem = "3.0"

# =============================================================================
# BINSTALL METADATA
# =============================================================================
# Enables `cargo binstall locald` to download pre-built binaries from GitHub Releases.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/locald-{ target }{ archive-suffix }"
bin-dir = "locald{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/locald-linux-x86_64.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/locald-linux-aarch64.tar.gz"

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.1.1"
oci-spec = "0.8.3"
predicates = "3.1.3"
rexpect = "0.6.2"
sqlx = "0.8.6"
tempfile = "3.23.0"
tokio = "1"
