[package]
name = "locald-vmm"
version = "0.1.0"
edition.workspace = true

[dependencies]
byteorder = "1.5.0"
kvm-bindings = "0.14.0"
kvm-ioctls = "0.24.0"
libc = "0.2.178"
linux-loader = "0.13.2"
virtio-queue = "0.16.0"
vm-device = "0.1.0"
vm-memory = { version = "0.16.2", features = ["backend-mmap"] }
vmm-sys-util = "0.15.0"

[dev-dependencies]
fetch-kernel = { version = "0.1.0", path = "../../tools/fetch-kernel" }

[lints]
workspace = true
